[SW-92] Update development doc with information how to submit app on yarn
DEVEL.md was updated and reorganized.